--- a/dev-tcltk/snack/ChangeLog
+++ b/dev-tcltk/snack/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-tcltk/snack
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/snack/ChangeLog,v 1.23 2007/05/31 13:13:44 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/snack/ChangeLog,v 1.24 2007/06/16 02:38:04 angelos Exp $
+
+  16 Jun 2007; Christoph Mende <angelos@gentoo.org> snack-2.2.10.ebuild:
+  Stable on amd64 wrt bug 179360
 
   31 May 2007; Christian Faulhammer <opfer@gentoo.org> snack-2.2.10.ebuild:
   stable x86, bug 179360
