Added ~amd64 wrt bug 177704 Package-Manager: portage-2.1.3_rc2

--- a/media-video/y4mscaler/ChangeLog
+++ b/media-video/y4mscaler/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/y4mscaler
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/y4mscaler/ChangeLog,v 1.3 2007/02/22 01:58:33 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/y4mscaler/ChangeLog,v 1.4 2007/06/16 02:41:38 angelos Exp $
+
+  16 Jun 2007; Christoph Mende <angelos@gentoo.org> y4mscaler-9.0.ebuild:
+  Added ~amd64 wrt bug 177704
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
