--- a/x11-themes/vanilla-dmz-aa-xcursors/ChangeLog
+++ b/x11-themes/vanilla-dmz-aa-xcursors/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/vanilla-dmz-aa-xcursors
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/vanilla-dmz-aa-xcursors/ChangeLog,v 1.2 2007/06/10 18:15:12 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/vanilla-dmz-aa-xcursors/ChangeLog,v 1.3 2007/06/16 03:00:43 angelos Exp $
+
+  16 Jun 2007; Christoph Mende <angelos@gentoo.org>
+  vanilla-dmz-aa-xcursors-0.4.ebuild:
+  Added ~amd64
 
   10 Jun 2007; Markus Rothe <corsair@gentoo.org>
   vanilla-dmz-aa-xcursors-0.4.ebuild:
