--- a/sys-fs/xfsdump/ChangeLog
+++ b/sys-fs/xfsdump/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/xfsdump
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/xfsdump/ChangeLog,v 1.52 2007/06/13 23:41:42 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/xfsdump/ChangeLog,v 1.53 2007/06/16 03:29:27 angelos Exp $
+
+  16 Jun 2007; Christoph Mende <angelos@gentoo.org> xfsdump-2.2.45.ebuild:
+  Stable on amd64 wrt security bug 180367
 
   13 Jun 2007; Mike Frysinger <vapier@gentoo.org>
   +files/xfsdump-2.2.45-LDFLAGS.patch, xfsdump-2.2.45.ebuild:
