--- a/dev-lang/mono/ChangeLog
+++ b/dev-lang/mono/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/mono
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.115 2007/06/02 16:43:13 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.116 2007/06/16 04:04:22 opfer Exp $
+
+  16 Jun 2007; Christian Faulhammer <opfer@gentoo.org> mono-1.2.4.ebuild:
+  stable x86, security bug 181921
 
   31 May 2007; Jurek Bartuszek <jurek@gentoo.org> mono-1.1.16.1.ebuild,
   mono-1.2.3.1.ebuild, mono-1.2.4.ebuild:
