--- a/x11-misc/fireflies/ChangeLog
+++ b/x11-misc/fireflies/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/fireflies
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/fireflies/ChangeLog,v 1.16 2007/03/09 08:19:53 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/fireflies/ChangeLog,v 1.17 2007/06/16 04:29:48 drac Exp $
+
+  16 Jun 2007; Samuli Suominen <drac@gentoo.org> fireflies-2.07.ebuild:
+  Quoting.
 
   09 Mar 2007; Samuli Suominen <drac@gentoo.org> fireflies-2.07.ebuild:
   Stop using virtual/x11. Start using emake. Fix quoting and sort deps.
