--- a/www-apps/dspam-web/ChangeLog
+++ b/www-apps/dspam-web/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/dspam-web
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/dspam-web/ChangeLog,v 1.34 2007/06/13 17:25:54 tsunam Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/dspam-web/ChangeLog,v 1.35 2007/06/16 04:35:29 mrness Exp $
+
+  16 Jun 2007; Alin Năstac <mrness@gentoo.org> dspam-web-3.8.0.ebuild:
+  Die in pkg_setup if dspam is installed with user-homedirs enabled (bug
+  179400 comment 15).
 
   13 Jun 2007; Joshua Jackson <tsunam@gentoo.org> dspam-web-3.8.0.ebuild:
   x86 stable
