--- a/dev-lisp/sbcl/ChangeLog
+++ b/dev-lisp/sbcl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lisp/sbcl
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.111 2007/06/16 01:32:14 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.112 2007/06/16 06:38:53 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> sbcl-1.0.4.ebuild:
+  ppc stable, bug #180118
 
   16 Jun 2007; Christoph Mende <angelos@gentoo.org> sbcl-1.0.4.ebuild:
   Stable on amd64 wrt bug 180118
