--- a/sci-libs/fftw/ChangeLog
+++ b/sci-libs/fftw/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/fftw
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/fftw/ChangeLog,v 1.60 2007/06/12 13:20:44 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/fftw/ChangeLog,v 1.61 2007/06/16 06:45:51 kumba Exp $
+
+  20 Jun 2007; Joshua Kinard <kumba@gentoo.org> fftw-3.1.2.ebuild:
+  Stable on mips, per #180963.
 
   12 Jun 2007; Christoph Mende <angelos@gentoo.org> fftw-3.1.2.ebuild:
   Stable on amd64 wrt bug 180963
