--- a/media-libs/libsamplerate/ChangeLog
+++ b/media-libs/libsamplerate/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libsamplerate
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libsamplerate/ChangeLog,v 1.48 2007/06/15 21:47:59 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libsamplerate/ChangeLog,v 1.49 2007/06/16 06:49:45 kumba Exp $
+
+  20 Jun 2007; Joshua Kinard <kumba@gentoo.org>
+  libsamplerate-0.1.2-r1.ebuild:
+  Stable on mips, per #165779.
 
   15 Jun 2007; Raúl Porcel <armin76@gentoo.org>
   libsamplerate-0.1.2-r1.ebuild:
