--- a/net-p2p/azureus/ChangeLog
+++ b/net-p2p/azureus/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/azureus
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/azureus/ChangeLog,v 1.48 2007/06/14 00:41:43 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/azureus/ChangeLog,v 1.49 2007/06/16 06:54:00 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  azureus-2.5.0.4-r1.ebuild:
+  ppc stable, bug #172657
 
   14 Jun 2007; Christoph Mende <angelos@gentoo.org>
   azureus-2.5.0.4-r1.ebuild:
