--- a/media-gfx/xsane/ChangeLog
+++ b/media-gfx/xsane/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/xsane
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/xsane/ChangeLog,v 1.62 2007/06/11 21:30:41 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/xsane/ChangeLog,v 1.63 2007/06/16 07:14:47 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> xsane-0.994.ebuild:
+  ppc stable, bug #178933
 
   11 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> xsane-0.994.ebuild:
   Marked stable on amd64 for bug #178933
