--- a/media-sound/alsaplayer/ChangeLog
+++ b/media-sound/alsaplayer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/alsaplayer
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsaplayer/ChangeLog,v 1.59 2007/06/12 02:59:47 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsaplayer/ChangeLog,v 1.60 2007/06/16 08:42:08 drac Exp $
+
+  16 Jun 2007; Samuli Suominen <drac@gentoo.org>
+  alsaplayer-0.99.80_rc1.ebuild:
+  Remove duplicate .desktop entry. Bug 166464, Comment #30.
 
 *alsaplayer-0.99.80_rc1 (12 Jun 2007)
 
