--- a/media-plugins/vdr-mplayer/ChangeLog
+++ b/media-plugins/vdr-mplayer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/vdr-mplayer
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-mplayer/ChangeLog,v 1.17 2007/05/15 12:51:41 zzam Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/vdr-mplayer/ChangeLog,v 1.18 2007/06/16 08:53:51 zzam Exp $
+
+  16 Jun 2007; Matthias Schwarzott <zzam@gentoo.org>
+  vdr-mplayer-0.9.15-r1.ebuild:
+  Marked stable on x86.
 
 *vdr-mplayer-0.9.15-r1 (15 May 2007)
 
