--- a/app-emulation/wine/ChangeLog
+++ b/app-emulation/wine/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/wine
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.181 2007/06/01 19:11:42 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.182 2007/06/16 09:00:57 vapier Exp $
+
+*wine-0.9.39 (16 Jun 2007)
+
+  16 Jun 2007; Mike Frysinger <vapier@gentoo.org> +wine-0.9.39.ebuild:
+  Version bump.
 
 *wine-0.9.38 (01 Jun 2007)
 
