--- a/net-analyzer/iptstate/ChangeLog
+++ b/net-analyzer/iptstate/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/iptstate
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/iptstate/ChangeLog,v 1.24 2007/06/04 19:12:53 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/iptstate/ChangeLog,v 1.25 2007/06/16 09:13:05 cedk Exp $
+
+  16 Jun 2007; Cédric Krier <cedk@gentoo.org> iptstate-2.2.1.ebuild:
+  Use emake
 
   04 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> iptstate-2.2.1.ebuild:
   Keyworded ~sparc wrt #175564
