--- a/app-office/openoffice-bin/ChangeLog
+++ b/app-office/openoffice-bin/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-office/openoffice-bin
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-bin/ChangeLog,v 1.167 2007/06/15 15:35:42 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-bin/ChangeLog,v 1.168 2007/06/16 09:39:27 suka Exp $
+
+  16 Jun 2007; Andreas Proschofsky <suka@gentoo.org>
+  -files/2.2.0/50-openoffice-bin, -files/2.2.0/ooo-wrapper2,
+  -openoffice-bin-2.2.0.ebuild:
+  Remove 2.2.0 for bug #181773
 
   15 Jun 2007; Christoph Mende <angelos@gentoo.org>
   openoffice-bin-2.2.1.ebuild:
