--- a/dev-python/PyQt/ChangeLog
+++ b/dev-python/PyQt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/PyQt
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt/ChangeLog,v 1.89 2007/06/01 13:59:56 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt/ChangeLog,v 1.90 2007/06/16 09:53:15 flameeyes Exp $
+
+  16 Jun 2007; Diego Pettenò <flameeyes@gentoo.org> PyQt-3.17.2.ebuild:
+  Add ~x86-fbsd keyword.
 
   01 Jun 2007; nixnut <nixnut@gentoo.org> PyQt-3.17.ebuild:
   Stable on ppc wrt bug 174413
