--- a/dev-libs/libpcre/ChangeLog
+++ b/dev-libs/libpcre/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libpcre
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpcre/ChangeLog,v 1.95 2007/06/15 18:28:05 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpcre/ChangeLog,v 1.96 2007/06/16 10:58:06 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> libpcre-7.1.ebuild:
+  Added ~ppc, bug #181670
 
   15 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> libpcre-7.1.ebuild:
   Marked ~amd64 for bug #181670
