--- a/dev-java/javolution/ChangeLog
+++ b/dev-java/javolution/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/javolution
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javolution/ChangeLog,v 1.8 2007/04/28 16:36:17 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javolution/ChangeLog,v 1.9 2007/06/16 11:05:00 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  javolution-4.0.2.ebuild:
+  Added ~ppc, bug #180408
 
 *javolution-2.2.4-r1 (28 Apr 2007)
 
