--- a/dev-util/deskzilla/ChangeLog
+++ b/dev-util/deskzilla/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/deskzilla
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/deskzilla/ChangeLog,v 1.4 2007/06/09 11:16:21 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/deskzilla/ChangeLog,v 1.5 2007/06/16 11:06:26 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  deskzilla-1.4_beta2.ebuild:
+  Added ~ppc, bug #180408
 
 *deskzilla-1.4_beta2 (09 Jun 2007)
 
