--- a/media-video/atomicparsley/ChangeLog
+++ b/media-video/atomicparsley/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/atomicparsley
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/atomicparsley/ChangeLog,v 1.5 2007/03/19 00:44:31 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/atomicparsley/ChangeLog,v 1.6 2007/06/16 11:11:37 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  atomicparsley-0.9.0.ebuild:
+  Added ~ppc, bug #182084
 
   19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
   Remove jhuebel from metadata.xml due to retirement.
