--- a/media-sound/audiotag/ChangeLog
+++ b/media-sound/audiotag/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/audiotag
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/audiotag/ChangeLog,v 1.15 2007/06/15 15:36:33 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/audiotag/ChangeLog,v 1.16 2007/06/16 11:12:36 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  audiotag-0.16.ebuild:
+  Added ~ppc, bug #182084
 
 *audiotag-0.16 (15 Jun 2007)
 
