--- a/x11-libs/fltk/ChangeLog
+++ b/x11-libs/fltk/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/fltk
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/fltk/ChangeLog,v 1.79 2007/05/16 09:47:42 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/fltk/ChangeLog,v 1.80 2007/06/16 11:12:37 flameeyes Exp $
+
+*fltk-1.1.7-r2 (16 Jun 2007)
+
+  16 Jun 2007; Diego Pettenò <flameeyes@gentoo.org> +fltk-1.1.7-r2.ebuild:
+  Fix fltk-config not to report the C(XX)FLAGS used to build fltk.
 
 *fltk-1.1.7-r1 (16 May 2007)
 
