--- a/dev-perl/Cairo/ChangeLog
+++ b/dev-perl/Cairo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Cairo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cairo/ChangeLog,v 1.31 2007/06/15 02:51:42 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cairo/ChangeLog,v 1.32 2007/06/16 11:15:34 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> Cairo-1.04.1.ebuild:
+  Added ~ppc, bug #181400
 
   15 Jun 2007; Michael Cummings <mcummings@gentoo.org> -Cairo-1.01.ebuild,
   -Cairo-1.02.1.ebuild, -Cairo-1.02.3.ebuild:
