--- a/dev-perl/Test-Number-Delta/ChangeLog
+++ b/dev-perl/Test-Number-Delta/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Test-Number-Delta
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Number-Delta/ChangeLog,v 1.5 2007/06/09 14:51:48 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Number-Delta/ChangeLog,v 1.6 2007/06/16 11:14:42 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  Test-Number-Delta-1.03.ebuild:
+  Added ~ppc, bug #181400
 
   09 Jun 2007; Markus Rothe <corsair@gentoo.org>
   Test-Number-Delta-1.03.ebuild:
