--- a/dev-python/snakeoil/ChangeLog
+++ b/dev-python/snakeoil/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/snakeoil
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/snakeoil/ChangeLog,v 1.6 2007/06/13 00:46:44 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/snakeoil/ChangeLog,v 1.7 2007/06/16 11:17:55 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  snakeoil-0.1_rc2.ebuild:
+  Added ~ppc, bug #181133
 
   13 Jun 2007; Christoph Mende <angelos@gentoo.org> snakeoil-0.1_rc2.ebuild:
   Added ~amd64
