--- a/sys-apps/pkgcore/ChangeLog
+++ b/sys-apps/pkgcore/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/pkgcore
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/pkgcore/ChangeLog,v 1.37 2007/06/13 00:48:31 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/pkgcore/ChangeLog,v 1.38 2007/06/16 11:20:13 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> pkgcore-0.3.ebuild:
+  Added ~ppc, bug #181133
 
   13 Jun 2007; Christoph Mende <angelos@gentoo.org> pkgcore-0.3.ebuild:
   Added ~amd64
