--- a/net-misc/d4x/ChangeLog
+++ b/net-misc/d4x/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/d4x
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/d4x/ChangeLog,v 1.46 2007/03/17 18:45:43 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/d4x/ChangeLog,v 1.47 2007/06/16 11:30:15 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  d4x-2.5.7.1-r1.ebuild:
+  Added ~ppc, bug #181022
 
   17 Mar 2007; Steve Dibb <beandog@gentoo.org> d4x-2.5.7.1-r1.ebuild:
   amd64 stable
