--- a/media-video/ffmpeg/ChangeLog
+++ b/media-video/ffmpeg/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-video/ffmpeg
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.199 2007/06/01 11:20:27 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.200 2007/06/16 11:54:48 lu_zero Exp $
+
+*ffmpeg-0.4.9_p20070616 (16 Jun 2007)
+
+  16 Jun 2007; Luca Barbato <lu_zero@gentoo.org>
+  +ffmpeg-0.4.9_p20070616.ebuild:
+  New snapshot, SVN revision 9330
 
   01 Jun 2007; Samuli Suominen <drac@gentoo.org>
   ffmpeg-0.4.9_p20070525.ebuild:
