--- a/dev-lang/mono/ChangeLog
+++ b/dev-lang/mono/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/mono
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.116 2007/06/16 04:04:22 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/mono/ChangeLog,v 1.117 2007/06/16 11:58:25 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> mono-1.2.4.ebuild:
+  ppc stable, bug #181921
 
   16 Jun 2007; Christian Faulhammer <opfer@gentoo.org> mono-1.2.4.ebuild:
   stable x86, security bug 181921
