--- a/app-office/openoffice/ChangeLog
+++ b/app-office/openoffice/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-office/openoffice
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.328 2007/06/16 04:24:03 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.329 2007/06/16 12:00:10 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  openoffice-2.2.1.ebuild:
+  ppc stable, bug #181921
 
   16 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
   openoffice-2.2.1.ebuild:
