--- a/media-sound/zynaddsubfx/ChangeLog
+++ b/media-sound/zynaddsubfx/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for media-sound/zynaddsubfx
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/zynaddsubfx/ChangeLog,v 1.25 2007/02/03 20:52:06 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/zynaddsubfx/ChangeLog,v 1.26 2007/06/16 12:00:35 flameeyes Exp $
+
+*zynaddsubfx-2.2.1-r3 (16 Jun 2007)
+
+  16 Jun 2007; Diego Pettenò <flameeyes@gentoo.org>
+  zynaddsubfx-2.2.0.ebuild, zynaddsubfx-2.2.1.ebuild,
+  zynaddsubfx-2.2.1-r1.ebuild, zynaddsubfx-2.2.1-r2.ebuild,
+  +zynaddsubfx-2.2.1-r3.ebuild:
+  Add a check for alsa-lib's midi useflag on all ebuilds, or the package will
+  not build. Revision bump with a version that honours CXX and CXXFLAGS.
 
   03 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
