--- a/media-fonts/font-ibm-type1/ChangeLog
+++ b/media-fonts/font-ibm-type1/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/font-ibm-type1
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-ibm-type1/ChangeLog,v 1.18 2007/02/04 18:44:02 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-ibm-type1/ChangeLog,v 1.19 2007/06/16 12:03:34 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  font-ibm-type1-1.0.0.ebuild:
+  ppc stable, bug #182207
 
   04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
   font-ibm-type1-1.0.0.ebuild:
