--- a/media-fonts/font-ibm-type1/ChangeLog
+++ b/media-fonts/font-ibm-type1/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/font-ibm-type1
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-ibm-type1/ChangeLog,v 1.19 2007/06/16 12:03:34 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-ibm-type1/ChangeLog,v 1.20 2007/06/16 12:32:45 angelos Exp $
+
+  16 Jun 2007; Christoph Mende <angelos@gentoo.org>
+  font-ibm-type1-1.0.0.ebuild:
+  Stable on amd64 wrt bug 182207
 
   16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   font-ibm-type1-1.0.0.ebuild:
