--- a/dev-java/swing-layout/ChangeLog
+++ b/dev-java/swing-layout/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/swing-layout
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/swing-layout/ChangeLog,v 1.8 2007/05/23 17:18:10 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/swing-layout/ChangeLog,v 1.9 2007/06/16 13:02:58 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  swing-layout-1.0.1-r1.ebuild:
+  Added ~ppc, bug #180291
 
   23 May 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Add ~x86-fbsd keyword. Bug #176906.
