--- a/x11-themes/tangerine-icon-theme/ChangeLog
+++ b/x11-themes/tangerine-icon-theme/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/tangerine-icon-theme
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/tangerine-icon-theme/ChangeLog,v 1.6 2007/06/07 18:09:37 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/tangerine-icon-theme/ChangeLog,v 1.7 2007/06/16 13:18:22 drac Exp $
+
+  16 Jun 2007; Samuli Suominen <drac@gentoo.org>
+  tangerine-icon-theme-0.20.ebuild:
+  Add missing quotes.
 
   07 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   tangerine-icon-theme-0.20.ebuild:
