--- a/media-video/ffmpeg/ChangeLog
+++ b/media-video/ffmpeg/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/ffmpeg
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.200 2007/06/16 11:54:48 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.201 2007/06/16 13:38:01 drac Exp $
+
+  16 Jun 2007; Samuli Suominen <drac@gentoo.org>
+  ffmpeg-0.4.9_p20070616.ebuild:
+  enable xvid to enable libxvid.
 
 *ffmpeg-0.4.9_p20070616 (16 Jun 2007)
 
