--- a/net-analyzer/nagios-plugins/ChangeLog
+++ b/net-analyzer/nagios-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/nagios-plugins
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins/ChangeLog,v 1.65 2007/06/11 20:23:08 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins/ChangeLog,v 1.66 2007/06/16 13:38:58 angelos Exp $
+
+  16 Jun 2007; Christoph Mende <angelos@gentoo.org>
+  nagios-plugins-1.4.8-r1.ebuild:
+  Stable on amd64 wrt bug 154418
 
   11 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   nagios-plugins-1.4.8-r1.ebuild:
