--- a/mail-filter/gld/ChangeLog
+++ b/mail-filter/gld/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-filter/gld
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/gld/ChangeLog,v 1.37 2007/06/15 20:09:09 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/gld/ChangeLog,v 1.38 2007/06/16 13:47:28 angelos Exp $
+
+  16 Jun 2007; Christoph Mende <angelos@gentoo.org> gld-1.7.ebuild:
+  Stable on amd64 wrt bug 160067
 
   15 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> ChangeLog:
   ppc stable, bug #160067
