--- a/dev-cpp/commoncpp2/ChangeLog
+++ b/dev-cpp/commoncpp2/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-cpp/commoncpp2
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/commoncpp2/ChangeLog,v 1.29 2007/02/22 00:59:22 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/commoncpp2/ChangeLog,v 1.30 2007/06/16 14:02:24 dev-zero Exp $
+
+*commoncpp2-1.5.7 (16 Jun 2007)
+
+  16 Jun 2007; Tiziano Müller <dev-zero@gentoo.org>
+  +files/1.5.7-as-needed.patch, +files/1.5.7-ssl_config.patch,
+  -commoncpp2-1.5.1.ebuild, +commoncpp2-1.5.7.ebuild:
+  Version bump (fixes bug #179520)
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
