--- a/dev-java/cpptasks/ChangeLog
+++ b/dev-java/cpptasks/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/cpptasks
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/cpptasks/ChangeLog,v 1.8 2007/02/28 18:40:32 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/cpptasks/ChangeLog,v 1.9 2007/06/16 14:03:34 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  cpptasks-1.0_beta4-r2.ebuild:
+  Added ~ppc, bug #179790
 
 *cpptasks-1.0_beta4-r2 (28 Feb 2007)
 
