--- a/dev-java/jdbc-jaybird/ChangeLog
+++ b/dev-java/jdbc-jaybird/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jdbc-jaybird
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jdbc-jaybird/ChangeLog,v 1.16 2007/05/29 19:16:00 wltjr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jdbc-jaybird/ChangeLog,v 1.17 2007/06/16 14:05:01 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  jdbc-jaybird-2.1.0-r1.ebuild:
+  Added ~ppc, bug #179790
 
   29 May 2007; William L. Thomson Jr. <wltjr@gentoo.org>
   -jdbc-jaybird-1.5.6.ebuild:
