--- a/media-libs/libkdcraw/ChangeLog
+++ b/media-libs/libkdcraw/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libkdcraw
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libkdcraw/ChangeLog,v 1.3 2007/05/23 20:48:22 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libkdcraw/ChangeLog,v 1.4 2007/06/16 14:14:56 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  libkdcraw-0.1.0.ebuild:
+  Added ~ppc, bug #179410
 
   23 May 2007; Raúl Porcel <armin76@gentoo.org> libkdcraw-0.1.0.ebuild:
   Add ~alpha/~ia64 wrt #179410
