--- a/dev-ruby/transaction-simple/ChangeLog
+++ b/dev-ruby/transaction-simple/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/transaction-simple
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/transaction-simple/ChangeLog,v 1.9 2007/05/17 19:08:11 rbrown Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/transaction-simple/ChangeLog,v 1.10 2007/06/16 14:20:33 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  transaction-simple-1.4.0.ebuild:
+  Added ~ppc, bug #178925
 
 *transaction-simple-1.4.0 (17 May 2007)
 
