--- a/app-office/mdbtools/ChangeLog
+++ b/app-office/mdbtools/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-office/mdbtools
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/mdbtools/ChangeLog,v 1.28 2007/05/19 09:01:55 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/mdbtools/ChangeLog,v 1.29 2007/06/16 14:25:48 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  mdbtools-0.6_pre1-r1.ebuild:
+  Added ~ppc, bug #178310
 
   19 May 2007; Markus Rothe <corsair@gentoo.org>
   mdbtools-0.6_pre1-r1.ebuild:
