--- a/app-vim/securemodelines/ChangeLog
+++ b/app-vim/securemodelines/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-vim/securemodelines
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/securemodelines/ChangeLog,v 1.12 2007/05/19 18:02:53 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/securemodelines/ChangeLog,v 1.13 2007/06/16 14:28:32 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  securemodelines-20070518.ebuild:
+  Added ~ppc, bug #178480
 
   19 May 2007; Roy Marples <uberlord@gentoo.org>
   securemodelines-20070518.ebuild:
