--- a/media-sound/shell-fm/ChangeLog
+++ b/media-sound/shell-fm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/shell-fm
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/shell-fm/ChangeLog,v 1.3 2007/05/16 02:55:14 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/shell-fm/ChangeLog,v 1.4 2007/06/16 14:30:25 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  shell-fm-0.2_p191.ebuild:
+  Added ~ppc, bug #178673
 
   16 May 2007; Daniel Gryniewicz <dang@gentoo.org> shell-fm-0.2_p191.ebuild:
   Marked ~amd64
