--- a/app-pda/libopensync/ChangeLog
+++ b/app-pda/libopensync/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-pda/libopensync
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/libopensync/ChangeLog,v 1.11 2007/05/22 16:04:57 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/libopensync/ChangeLog,v 1.12 2007/06/16 14:41:56 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  libopensync-0.22.ebuild:
+  Added ~ppc, bug #178853
 
   22 May 2007; Markus Rothe <corsair@gentoo.org> libopensync-0.22.ebuild:
   Added ~ppc64; bug #178853
