--- a/kde-base/kde/ChangeLog
+++ b/kde-base/kde/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kde
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde/ChangeLog,v 1.176 2007/06/04 04:03:56 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde/ChangeLog,v 1.177 2007/06/16 14:47:27 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> kde-3.5.7.ebuild:
+  Added ~ppc, bug #180400
 
   03 Jun 2007; Joshua Kinard <kumba@gentoo.org> kde-3.5.6.ebuild:
   Marked unstable on mips.
