--- a/kde-base/kdepim-meta/ChangeLog
+++ b/kde-base/kdepim-meta/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdepim-meta
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-meta/ChangeLog,v 1.74 2007/05/26 20:00:03 cryos Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-meta/ChangeLog,v 1.75 2007/06/16 14:44:49 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  kdepim-meta-3.5.7.ebuild:
+  Added ~ppc, bug #180400
 
   26 May 2007; Marcus D. Hanwell <cryos@gentoo.org>
   kdepim-meta-3.5.7.ebuild:
