--- a/kde-base/kdepim/ChangeLog
+++ b/kde-base/kdepim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdepim
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim/ChangeLog,v 1.271 2007/06/04 01:09:30 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim/ChangeLog,v 1.272 2007/06/16 14:45:42 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> kdepim-3.5.7.ebuild:
+  Added ~ppc, bug #180400
 
   04 Jun 2007; Joshua Kinard <kumba@gentoo.org> kdepim-3.5.6-r3.ebuild:
   Marked unstable on mips.
