--- a/kde-base/kitchensync/ChangeLog
+++ b/kde-base/kitchensync/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kitchensync
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kitchensync/ChangeLog,v 1.70 2007/05/23 00:02:31 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kitchensync/ChangeLog,v 1.71 2007/06/16 14:43:29 dertobi123 Exp $
+
+  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  kitchensync-3.5.7.ebuild:
+  Added ~ppc, bug #180400
 
 *kitchensync-3.5.7 (23 May 2007)
 
