--- a/x11-drivers/xf86-video-nv/ChangeLog
+++ b/x11-drivers/xf86-video-nv/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-video-nv
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-nv/ChangeLog,v 1.60 2008/01/31 04:02:26 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-nv/ChangeLog,v 1.61 2008/03/09 21:18:59 dberkholz Exp $
+
+*xf86-video-nv-2.1.8 (09 Mar 2008)
+
+  09 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +xf86-video-nv-2.1.8.ebuild:
+  Bump.
 
   31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
   -xf86-video-nv-1.1.2.ebuild, -xf86-video-nv-1.2.0.ebuild,
