--- a/mail-client/mutt/ChangeLog
+++ b/mail-client/mutt/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/mutt
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.120 2007/08/29 16:36:56 phreak Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mutt/ChangeLog,v 1.121 2008/03/09 21:36:14 ricmm Exp $
+
+  09 Mar 2008; <ricmm@gentoo.org> mutt-1.5.11-r2.ebuild,
+  mutt-1.5.13-r1.ebuild, mutt-1.5.16.ebuild:
+  Marked unstable on mips due to unstable deps
 
   29 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
   Removing agriffis from metadata due to his retirement (see #182294 for
