--- a/app-crypt/qca-tls/ChangeLog
+++ b/app-crypt/qca-tls/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/qca-tls
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/qca-tls/ChangeLog,v 1.48 2008/02/15 09:04:35 alonbl Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/qca-tls/ChangeLog,v 1.49 2008/03/09 21:45:19 ricmm Exp $
+
+  09 Mar 2008; <ricmm@gentoo.org> qca-tls-1.0-r3.ebuild:
+  Marked unstable on mips due to unstable deps
 
   15 Feb 2008; Alon Bar-Lev <alonbl@gentoo.org> -qca-tls-1.0.ebuild,
   -qca-tls-1.0-r2.ebuild, qca-tls-1.0-r3.ebuild, qca-tls-1.0-r4.ebuild:
