--- a/x11-libs/qt/ChangeLog
+++ b/x11-libs/qt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/qt
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.522 2008/03/09 14:46:37 zlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.523 2008/03/09 21:45:56 zlin Exp $
+
+  09 Mar 2008; Bo Ørsted Andresen <zlin@gentoo.org> qt-4.4.0_beta1.ebuild:
+  Revert last commit.
 
   09 Mar 2008; Bo Ørsted Andresen <zlin@gentoo.org> -qt-4.4.0_beta1.ebuild:
   Removing the qt-4.4 meta ebuild. Packages are not supposed to DEPEND on meta
