--- a/net-misc/smb4k/ChangeLog
+++ b/net-misc/smb4k/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/smb4k
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/smb4k/ChangeLog,v 1.66 2008/02/19 01:57:55 ingmar Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/smb4k/ChangeLog,v 1.67 2008/03/09 21:52:26 carlo Exp $
+
+*smb4k-0.9.3 (09 Mar 2008)
+
+  09 Mar 2008; Carsten Lohrke <carlo@gentoo.org> -smb4k-0.9.2.ebuild,
+  +smb4k-0.9.3.ebuild:
+  smb4k-0.9.3.ebuild
 
   19 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> -smb4k-0.8.1.ebuild,
   -smb4k-0.9.0.ebuild, -smb4k-0.9.1.ebuild:
