Drop to ~mips due to unstable deps Package-Manager: portage-2.1.4.4

--- a/sys-devel/autogen/ChangeLog
+++ b/sys-devel/autogen/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/autogen
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/autogen/ChangeLog,v 1.44 2008/01/29 21:40:02 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/autogen/ChangeLog,v 1.45 2008/03/10 02:03:18 ricmm Exp $
+
+  10 Mar 2008; <ricmm@gentoo.org> autogen-5.7.1.ebuild, autogen-5.9.ebuild:
+  Drop to ~mips due to unstable deps
 
 *autogen-5.9.4 (29 Jan 2008)
 
