--- a/x11-misc/rendercheck/ChangeLog
+++ b/x11-misc/rendercheck/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/rendercheck
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/rendercheck/ChangeLog,v 1.6 2007/02/21 23:55:35 jokey Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/rendercheck/ChangeLog,v 1.7 2008/03/10 02:44:49 dberkholz Exp $
+
+*rendercheck-1.3 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +rendercheck-1.3.ebuild:
+  Bump.
 
   21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
   Redigest for Manifest2
